<resources>
    <string name="app_name">Proximity One</string>
    <string name="add_description">Declare a new address</string>
    <string name="address">Address</string>
    <string name="ok">ok</string>
    <string name="nok">cancel</string>
    <string name="some_text">ipsos</string>
    <string name="address_title">address</string>
    <string name="address_displayName_field">full address: %s</string>
    <string name="latitude_field">latitude: %f</string>
    <string name="longitude_field">longitude: %f</string>
    <string name="position_title">position</string>
    <string name="distance_title">distance</string>
    <string name="distance">distance from address: %d m</string>

    <string name="launch_activity">Launch activity</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="saved_address_latitude">saved_address_latitude</string>
    <string name="saved_address_longitude">saved_address_longitude</string>
    <string name="saved_address_displayName">saved_address_displayName</string>
</resources>